# uptime-dick

./: App.hs  CHANGELOG.md  LICENSE  README.md  Tests.hs  extract_changes.pl  uptime-dick.cabal
.github/workflows/: build_test_doc_deploy.yml  test.yml
lib/: DaysDick.hs
